packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_generate_event_spy_helpers__empty_event.snap
---
source: src/tests/test_generate_event_spy_helpers.rs
expression: get_string_result(input)
snapshot_kind: text
---
TokenStream:

#[generate_trait]
impl MockContractSpyHelpers of MockContractSpyHelpersTrait {
    fn assert_event_empty_event(ref self: EventSpy, contract: ContractAddress) {
        let mut keys = array![];
        keys.append_serde(selector!("EmptyEvent"));
        let mut data = array![];
        let expected = Event { keys, data };
        self.assert_only_event(contract, expected);
    }
    fn assert_only_event_empty_event(ref self: EventSpy, contract: ContractAddress) {
        self.assert_event_empty_event(contract);
        self.assert_no_events_left_from(contract);
    }
}


Diagnostics:

None

AuxData:

None
