packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_generate_event_spy_helpers__empty_impl.snap
---
source: src/tests/test_generate_event_spy_helpers.rs
expression: get_string_result(input)
snapshot_kind: text
---
TokenStream:

#[generate_trait]
impl MockContractSpyHelpers of MockContractSpyHelpersTrait {}


Diagnostics:

None

AuxData:

None
