packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_generate_event_spy_helpers__event_missing_semicolon.snap
---
source: src/tests/test_generate_event_spy_helpers.rs
assertion_line: 189
expression: get_string_result(input)
---
TokenStream:

None

Diagnostics:

====
Error: Parsing Failure: ParserError { message: "Expected `;` to finish the event definition. Terminate each event with `;`. (around `}}`)" }====

AuxData:

None
