packages/macros/src/tests/snapshots/openzeppelin_macros__tests__test_generate_event_spy_helpers__event_with_only.snap
---
source: src/tests/test_generate_event_spy_helpers.rs
expression: get_string_result(input)
snapshot_kind: text
---
TokenStream:

#[generate_trait]
pub impl MockContractSpyHelpers of MockContractSpyHelpersTrait {
    fn assert_event_only_event(ref self: EventSpy, contract: ContractAddress, field: u64) {
        let mut keys = array![];
        keys.append_serde(selector!("OnlyEvent"));
        let mut data = array![];
        data.append_serde(field);
        let expected = Event { keys, data };
        self.assert_only_event(contract, expected);
    }
    fn assert_only_event_only_event(ref self: EventSpy, contract: ContractAddress, field: u64) {
        self.assert_event_only_event(contract, field);
        self.assert_no_events_left_from(contract);
    }
}


Diagnostics:

None

AuxData:

None
